--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -1,205 +1,181 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
-    <title>FourSchlag KPI Client</title>
+    <title>FourSchlag WS Client</title>
     <link rel="stylesheet" type="text/css" media="screen"
           href="css/jquery-ui-custom.css"/>
     <link rel="stylesheet" type="text/css" media="screen"
           href="css/ui.jqgrid.css">
     <link rel="stylesheet" type="text/css" media="screen"
           href="css/ui.multiselect.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
     <script src="js/jquery.jqGrid.min.js" type="text/javascript"></script>
     <script src="js/i18n/grid.locale-en.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script>
         $(function () {
             $.fn.runGrid = function (year, period, currency) {
+                //set the http endpoint url
+                var endpointScheme = 'http://'
+                var endpointUrl = '141.19.145.133:8080'
+                var endpointPath = '/fourschlag/api/forecast/sales/'
                 $("#resultList").jqGrid({
-                    url: 'http://141.19.145.133:8080/fourschlag/api/forecast/sales/' + year + '/' + period + '/' + currency,
+                    url: endpointScheme + endpointUrl + endpointPath + year + '/' + period + '/' + currency,
                     datatype: "json",
-                    colNames: ['orderNumber', 'kpi', 'm01', 'm02', 'm03', 'm04', 'm05', 'm06', 'm07', 'm08', 'm09', 'm10', 'm11',
-                        'm12', 'm13', 'm14', 'm15', 'm16', 'm17', 'm18', 'bj2', 'bj3', 'bj4', 'region', 'subregion', 'sbu', 'entryType',
-                        'productMainGroup', 'salesType', 'currency', 'unit', 'fcType'
+                    colNames: ['ORDER_NUMBER', 'KPI', 'M01', 'M02', 'M03', 'M04', 'M05', 'M06', 'M07', 'M08', 'M09', 'M10', 'M11',
+                        'M12', 'M13', 'M14', 'M15', 'M16', 'M17', 'M18', 'BJ2', 'BJ3', 'BJ4', 'REGION', 'SUBREGION', 'SBU', 'ENTRY_TYPE',
+                        'PRODUCT_MAIN_GROUP', 'SALES_TYPE', 'CURRENCY', 'UNIT', 'FC_TYPE'
                     ],
                     colModel: [{
                         name: 'orderNumber',
-                        index: 'orderNumber',
                         width: 55,
                         align: "left"
                     }, {
                         name: 'kpi',
-                        index: 'kpi',
                         width: 70,
                         align: "left"
                     }, {
                         name: 'm01',
-                        index: 'm01',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm02',
-                        index: 'm02',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm03',
-                        index: 'm03',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm04',
-                        index: 'm04',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm05',
-                        index: 'm05',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm06',
-                        index: 'm06',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm07',
-                        index: 'm07',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm08',
-                        index: 'm08',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm09',
-                        index: 'm09',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm10',
-                        index: 'm10',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm11',
-                        index: 'm11',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm12',
-                        index: 'm12',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm13',
-                        index: 'm13',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm14',
-                        index: 'm14',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm15',
-                        index: 'm15',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm16',
-                        index: 'm16',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm17',
-                        index: 'm17',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'm18',
-                        index: 'm18',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'bj2',
-                        index: 'bj2',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'bj3',
-                        index: 'bj3',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'bj4',
-                        index: 'bj4',
                         width: 40,
                         align: "right"
                     }, {
                         name: 'region',
-                        index: 'region',
                         width: 75,
                         align: "left"
                     }, {
                         name: 'subregion',
-                        index: 'subregion',
                         width: 75,
                         align: "left"
                     }, {
                         name: 'sbu',
-                        index: 'sbu',
                         width: 50,
                         align: "left"
                     }, {
                         name: 'entryType',
-                        index: 'entryType',
                         width: 30,
                         align: "left"
                     }, {
                         name: 'productMainGroup',
-                        index: 'productMainGroup',
                         width: 80,
                         align: "left"
                     }, {
                         name: 'salesType',
-                        index: 'salesType',
                         width: 55,
                         align: "left"
                     }, {
                         name: 'currency',
-                        index: 'currency',
                         width: 30,
                         align: "left"
                     }, {
                         name: 'unit',
-                        index: 'unit',
                         width: 30,
                         align: "left"
                     }, {
                         name: 'fcType',
-                        index: 'fcType',
                         width: 30,
                         align: "left"
                     }
                     ],
                     rowNum: 780,
-                    rowList: [1],
+                    rowList: [780],
                     pager: '#resultPager',
                     sortname: 'region',
                     sortorder: "desc",
                     viewrecords: true,
                     multiselect: false,
                     caption: "FourSchlag Sales KPIs",
-                    height: '1000',
+                    height: '650',
                 });
                 $("#resultList").jqGrid('navGrid', '#resultPager', {
                     edit: false,
                     add: false,
                     del: false
                 });
+                //trigger for refresh
+                $("#resultList").jqGrid().setGridParam({url: endpointScheme + endpointUrl + endpointPath + year + '/' + period + '/' + currency}).trigger("reloadGrid")
+                //$("#resultList").trigger("reloadGrid", {fromServer: true});
             }
 
             // listener on submit input form
@@ -208,29 +184,34 @@
                 e.preventDefault();
                 var data = $("#inputForm :input").serializeArray();
                 console.log("querying for year=" + data[0].value + ", period=" + data[1].value + ", currency=" + data[2].value);
+                //$("#resultList").jqGrid("clearGridData");
                 $.fn.runGrid(data[0].value, data[1].value, data[2].value);
                 console.log("query done");
             });
         });
     </script>
-    <script>
-
-
-    </script>
 </head>
 
 <body>
+<div class="jumbotron">
+    <form id="inputForm" class="form-inline">
+        <div class="form-group">
+            <label for="year">Year:</label>
+            <input type="text" class="form-control" name="year" value="2013">
+        </div>
+        <div class="form-group">
+            <label for="period">Period:</label>
+            <input type="text" class="form-control" name="period" value="201301">
+        </div>
+        <div class="form-group">
+            <label for="currency">Currency:</label>
+            <input type="text" class="form-control" name="currency" value="eur">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+</div>
 
-<form id="inputForm">
-    <label for="year">Year:</label>
-    <input type="text" name="year" value="2013">
-    <label for="period">Period:</label>
-    <input type="text" name="period" value="201301">
-    <label for="currency">Currency:</label>
-    <input type="text" name="currency" value="eur">
-    <input type="submit" value="Submit">
-</form>
-<p>Called Webservice Schema: <strong>/sales/{year}/{period}/{currency}</strong></p>
+
 <table id="resultList"></table>
 <div id="resultPager"></div>
 </body>
