added all cassandra cluster endpoints

--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+    COPYRIGHT TEAM FOURSCHLAG, Steffen Wagner
+    USE ONLY WITH EXPLICIT PERMISSION
+-->
 <html>
 <head>
     <meta charset="utf-8">
