--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -20,10 +20,10 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script>
         $(function () {
-            $.fn.runGrid = function (kpiType, year, period, currency) {
+            $.fn.runGrid = function (backendServer, kpiType, year, period, currency) {
                 //set the http endpoint url
                 var endpointScheme = 'http://'
-                var endpointUrl = '141.19.145.133:8080'
+                var endpointUrl = backendServer
                 var endpointPath = '/fourschlag/api/forecast/' + kpiType + '/'
                 $("#resultList").jqGrid({
                     url: endpointScheme + endpointUrl + endpointPath + year + '/' + period + '/' + currency,
@@ -187,9 +187,9 @@
                 e.preventDefault();
                 var data = $("#inputForm :input").serializeArray();
                 var kpiType = $('#kpiType').find(":selected").text();
-                console.log("querying for kpiType=" + kpiType + ", year=" + data[0].value + ", period=" + data[1].value + ", currency=" + data[2].value);
+                console.log("querying to backend=" + data[0].value + "for kpiType=" + kpiType + ", year=" + data[1].value + ", period=" + data[2].value + ", currency=" + data[3].value);
                 $("#resultList").jqGrid("clearGridData");
-                $.fn.runGrid(kpiType, data[0].value, data[1].value, data[2].value);
+                $.fn.runGrid(kpiType, data[0].value, data[1].value, data[2].value, data[3].value);
                 console.log("query done");
             });
         });
@@ -209,6 +209,15 @@
                         <div class="col-xs-12 col-md-2">
                             <div class="form-group">
                                 <label class="col-lg-3 control-label"
+                                       for="backendServer">Backend</label>
+                                <div class="col-lg-8">
+                                    <input type="text" class="form-control"
+                                           name="backendServer"
+                                           value="141.19.145.133:8080">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-lg-3 control-label"
                                        for="kpiType">Area</label>
                                 <div class="col-lg-8">
                                     <select class="form-control" id="kpiType">
@@ -221,7 +230,7 @@
                         <div class="col-xs-12 col-md-2">
                             <div class="form-group">
                                 <label class="col-lg-3 control-label"
-                                       for="year">Year</label>
+                                       for="year">Plany-Year</label>
                                 <div class="col-lg-8">
                                     <input type="text" class="form-control"
                                            name="year"
