--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -189,7 +189,7 @@
                 var kpiType = $('#kpiType').find(":selected").text();
                 console.log("querying to backend=" + data[0].value + "for kpiType=" + kpiType + ", year=" + data[1].value + ", period=" + data[2].value + ", currency=" + data[3].value);
                 $("#resultList").jqGrid("clearGridData");
-                $.fn.runGrid(kpiType, data[0].value, data[1].value, data[2].value, data[3].value);
+                $.fn.runGrid(data[0].value, kpiType, data[1].value, data[2].value, data[3].value);
                 console.log("query done");
             });
         });
@@ -230,7 +230,7 @@
                         <div class="col-xs-12 col-md-2">
                             <div class="form-group">
                                 <label class="col-lg-3 control-label"
-                                       for="year">Plany-Year</label>
+                                       for="year">Plan-Year</label>
                                 <div class="col-lg-8">
                                     <input type="text" class="form-control"
                                            name="year"
