--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -194,9 +194,17 @@
             });
         });
     </script>
+    <script>
+        // get browser host from location and set default input value
+        function setBrowserHost() {
+            var loc = $(location).attr('host');
+            console.log("found " + loc + " as backend location" );
+            document.getElementsByName("backendServer")[0].defaultValue = loc;
+        }
+    </script>
 </head>
 
-<body>
+<body onload="setBrowserHost();">
 
 
 <div class="panel panel-default">
@@ -213,7 +221,7 @@
                                 <div class="col-lg-8">
                                     <input type="text" class="form-control"
                                            name="backendServer"
-                                           value="141.19.145.142:8080">
+                                           value="">
                                 </div>
                             </div>
                             <div class="form-group">
