--- a/web/frontendv2/index.html
+++ b/web/frontendv2/index.html
@@ -9,7 +9,8 @@
     <script src="js/jquery-1.12.3.js" type="text/javascript"></script>
 
     <script> $(document).ready(function() {
-            $('#example').DataTable( {
+            $('#table').DataTable(
+                    {
     "processing": true,
     "ajax": "data/objects_deep.txt",
     "columns": [
@@ -18,31 +19,31 @@
     { "data": "M01" },
     { "data": "M02" },
     { "data": "M03" },
-    { "data": "M04" }
+    { "data": "M04" },
     { "data": "M05" },
     { "data": "M06" },
     { "data": "M07" },
     { "data": "M08" },
     { "data": "M09" },
-    { "data": "M10" }
+    { "data": "M10" },
     { "data": "M11" },
     { "data": "M12" },
     { "data": "M13" },
     { "data": "M14" },
     { "data": "M15" },
-    { "data": "M16" }
+    { "data": "M16" },
     { "data": "M17" },
     { "data": "M18" },
     { "data": "BJ2" },
     { "data": "BJ3" },
     { "data": "BJ4" },
-    { "data": "REGION" }
+    { "data": "REGION" },
     { "data": "SUBREGION" },
     { "data": "SBU" },
     { "data": "ENTRY_TYPE" },
     { "data": "PRODUCT_MAIN_GROUP" },
     { "data": "SALES_TYPE" },
-    { "data": "CURRENCY" }
+    { "data": "CURRENCY" },
     { "data": "UNIT" },
     { "data": "FC_TYPE" }
     ]
@@ -56,7 +57,7 @@
 
 <body>
 
-<table id="example" class="display" cellspacing="0" width="100%">
+<table id="table" class="display" cellspacing="0" width="100%">
     <thead>
     <tr>
         <th>ORDER_NUMBER</th>
