css und js lokal angelegt. bootstrap von prototyp eingebunden.

--- a/web/frontendv2/get.html
+++ b/web/frontendv2/get.html
@@ -6,15 +6,19 @@
     <meta charset="UTF-8">
     <title>Daten abfragen</title>
 
+    <link rel="stylesheet" type="text/css"
+          href="css/bootstrap.min.css"/>
 
     <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"/>
+          href="css/jquery.dataTables.min.css"/>
+
+   <script type="text/javascript" src="js/bootstrap.min.js" ></script>
 
     <script type="text/javascript"
-            src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+            src="js/jquery.dataTables.min.js"></script>
 
     <script type="text/javascript"
-            src="https://code.jquery.com/jquery-1.12.3.js"></script>
+            src="js/jquery-1.12.3.js"></script>
 
 
     <script>
@@ -88,7 +92,7 @@
 
 
 <ul id="menu">
-    <li><a href="index.html">Startseite</a></li>
+    <li><a href="index.html">Zurück zur Startseite</a></li>
 </ul>
 
 <div class="panel panel-default">
@@ -114,6 +118,7 @@
                                 <div class="col-lg-8">
                                     <select class="form-control" id="kpiType">
                                         <option>sales</option>
+                                        <option>fixed costs</option>
                                     </select>
                                 </div>
                             </div>
