--- a/web/frontendv2/index.html
+++ b/web/frontendv2/index.html
@@ -3,15 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Menü</title>
+
+    <link rel="stylesheet" type="text/css"
+          href="css/bootstrap.min.css"/>
+
+    <script type="text/javascript" src="js/bootstrap.min.js" ></script>
+
+
 </head>
 <body>
 
-<ul id="menu">
-    <li><a href="index.html">Startseite</a></li>
-    <li><a href="import.html">Daten importieren</a></li>
-    <li><a class="active" href="get.html">Daten abfragen</a></li>
-    <li><a href="manipulate.html">Daten ändern</a></li>
-</ul>
+
+<div class="panel-body">
+    <div class="jumbotron">
+        <form id="inputForm" class="form-horizontal" role="form">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-12 col-md-2">
+                        <div class="form-group">
+                            <ul id="menu">
+                                <li><a href="index.html">Startseite</a></li>
+                                <li><a href="import.html">Daten importieren</a></li>
+                                <li><a class="active" href="get.html">Daten abfragen</a></li>
+                                <li><a href="manipulate.html">Daten ändern</a></li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </form>
+    </div>
+</div>
+
+
 
 
 
