bootstrap template implementiert. menü verlinkt.

--- a/web/frontendv2/index.html
+++ b/web/frontendv2/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <title>Menü</title>
 
+
+    <link rel="stylesheet" type="text/css" href="css/logo-nav.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
     <link rel="stylesheet" type="text/css"
           href="css/bootstrap.min.css"/>
 
     <script type="text/javascript" src="js/bootstrap.min.js" ></script>
-
+    <script type="text/javascript" src="js/bootstrap.js" > </script>
 
 </head>
 <body>
