--- a/web/frontendv2/get.html
+++ b/web/frontendv2/get.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" type="text/css"
           href="css/jquery.dataTables.min.css"/>
 
+    <link rel="stylesheet" type="text/css" href="css/logo-nav.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+    <script type="text/javascript" src="js/bootstrap.js" > </script>
+
    <script type="text/javascript" src="js/bootstrap.min.js" ></script>
 
     <script type="text/javascript"
@@ -84,19 +89,18 @@
     </script>
 
 
-</head>
+
 
 <title>FourSchlag WS Client</title>
+
+</head>
+
 
 <body>
 
 
-<ul id="menu">
-    <li><a href="index.html">Zurück zur Startseite</a></li>
-</ul>
-
 <div class="panel panel-default">
-    <div class="panel-heading">FourSchlag JS Sample Frontend</div>
+
     <div class="panel-body">
         <div class="jumbotron">
             <form id="inputForm" class="form-horizontal" role="form">
@@ -129,9 +133,10 @@
                                 <label class="col-lg-3 control-label"
                                        for="year">Plan-Year</label>
                                 <div class="col-lg-8">
-                                    <input type="text" class="form-control"
-                                           name="year"
-                                           value="2013">
+
+                               <input type="text" class="form-control"
+                                         name="year"
+                                       value="2013">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -176,7 +181,60 @@
     </div>
 </div>
 
-<table id="myTable" class="display" cellspacing="0" width="100%">
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="index_bootstrap.html" class="navbar-brand" >
+                <img src="img/fourschlag-logo.png" alt="Fourschlag-Logo" height="60" width="60"/>
+            </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+
+                <li>
+                    <a href="get.html">Daten abfragen</a>
+                </li>
+                <li>
+                    <a href="manipulate.html">Daten ändern</a>
+                </li>
+                <li>
+                    <a href="import.html">Daten import</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+<!-- Page Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1>Fourschlag WS Client</h1>
+
+        </div>
+    </div>
+</div>
+<!-- /.container -->
+
+<!-- jQuery -->
+<script src="js/jquery-1.12.3.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+
+<!--<table id="myTable" class="display" cellspacing="0" width="100%">
     <thead>
     <tr>
         <th>ORDER_NUMBER</th>
@@ -213,6 +271,8 @@
         <th>FC_TYPE</th>
     </tr>
     </thead>
-</table>
+</table> -->
 </body>
+
+
 </html>
