--- a/web/frontendv2/manipulate.html
+++ b/web/frontendv2/manipulate.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Daten ändern</title>
+
+    <link rel="stylesheet" type="text/css"
+          href="css/bootstrap.min.css"/>
+
+    <link rel="stylesheet" type="text/css"
+          href="css/jquery.dataTables.min.css"/>
+
+    <link rel="stylesheet" type="text/css" href="css/logo-nav.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+    <script type="text/javascript" src="js/bootstrap.js" > </script>
+
+    <script type="text/javascript" src="js/bootstrap.min.js" ></script>
+
+    <script type="text/javascript"
+            src="js/jquery.dataTables.min.js"></script>
+
+    <script type="text/javascript"
+            src="js/jquery-1.12.3.js"></script>
 </head>
 <body>
-<ul id="menu">
-    <li><a href="index.html">Startseite</a></li>
-</ul>
+
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="index_bootstrap.html" class="navbar-brand" >
+                <img src="img/fourschlag-logo.png" alt="Fourschlag-Logo" height="60" width="60"/>
+            </a>
+        </div>
+
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+
+
+<!-- Page Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1>Fourschlag Daten ändern</h1>
+
+        </div>
+    </div>
+</div>
+<!-- /.container -->
+
+<!-- jQuery -->
+<script src="js/jquery-1.12.3.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
 </body>
 </html>
