unnötige imports entfernt, index.html umbenannt, alte index entfernt

--- a/web/frontendv2/get.html
+++ b/web/frontendv2/get.html
@@ -168,6 +168,7 @@
                                             width="120px"
                                             height="120px"
                                             src="img/fourschlag-logo.png"/>
+
                                     </button>
                                 </div>
                             </div>
@@ -192,7 +193,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index_bootstrap.html" class="navbar-brand" >
+            <a href="index.html" class="navbar-brand" >
                 <img src="img/fourschlag-logo.png" alt="Fourschlag-Logo" height="60" width="60"/>
             </a>
         </div>
@@ -207,7 +208,7 @@
                     <a href="manipulate.html">Daten ändern</a>
                 </li>
                 <li>
-                    <a href="import.html">Daten import</a>
+                    <a href="import.html">Daten importieren</a>
                 </li>
             </ul>
         </div>
@@ -225,13 +226,7 @@
         </div>
     </div>
 </div>
-<!-- /.container -->
 
-<!-- jQuery -->
-<script src="js/jquery-1.12.3.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
 
 
 <!--<table id="myTable" class="display" cellspacing="0" width="100%">
