--- a/web/frontendv2/index.html
+++ b/web/frontendv2/index.html
@@ -1,49 +1,78 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Menü</title>
 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <link rel="stylesheet" type="text/css" href="css/logo-nav.css" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <title>Fourschlag WS Client</title>
 
-    <link rel="stylesheet" type="text/css"
-          href="css/bootstrap.min.css"/>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <script type="text/javascript" src="js/bootstrap.min.js" ></script>
-    <script type="text/javascript" src="js/bootstrap.js" > </script>
+    <!-- Custom CSS -->
+    <link href="css/logo-nav.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 </head>
+
 <body>
 
-
-<div class="panel-body">
-    <div class="jumbotron">
-        <form id="inputForm" class="form-horizontal" role="form">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xs-12 col-md-2">
-                        <div class="form-group">
-                            <ul id="menu">
-                                <li><a href="index.html">Startseite</a></li>
-                                <li><a href="import.html">Daten importieren</a></li>
-                                <li><a class="active" href="get.html">Daten abfragen</a></li>
-                                <li><a href="manipulate.html">Daten ändern</a></li>
-                            </ul>
-
-                        </div>
-                    </div>
-                </div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="index.html" class="navbar-brand" >
+                    <img src="img/fourschlag-logo.png" alt="Fourschlag-Logo" height="60" width="60"/>
+                </a>
             </div>
-         </form>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+
+                    <li>
+                        <a href="get.html">Daten abfragen</a>
+                    </li>
+                    <li>
+                        <a href="manipulate.html">Daten ändern</a>
+                    </li>
+                    <li>
+                        <a href="import.html">Daten importieren</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Fourschlag WS Client</h1>
+
+            </div>
+        </div>
     </div>
-</div>
-
-
-
-
-
 
 </body>
+
 </html>
