--- a/web/frontendv2/manipulate.html
+++ b/web/frontendv2/manipulate.html
@@ -35,9 +35,25 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index_bootstrap.html" class="navbar-brand" >
+            <a href="index.html" class="navbar-brand" >
                 <img src="img/fourschlag-logo.png" alt="Fourschlag-Logo" height="60" width="60"/>
             </a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+
+                <li>
+                    <a href="get.html">Daten abfragen</a>
+                </li>
+                <li>
+                    <a href="manipulate.html">Daten ändern</a>
+                </li>
+                <li>
+                    <a href="import.html">Daten importieren</a>
+                </li>
+            </ul>
         </div>
 
         <!-- /.navbar-collapse -->
@@ -56,13 +72,7 @@
         </div>
     </div>
 </div>
-<!-- /.container -->
 
-<!-- jQuery -->
-<script src="js/jquery-1.12.3.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
