--- a/web/frontendv2/get.html
+++ b/web/frontendv2/get.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
 
+<head>
 
     <meta charset="UTF-8">
     <title>Daten abfragen</title>
 
-    <link rel="stylesheet" type="text/css"
-          href="css/bootstrap.min.css"/>
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-    <link rel="stylesheet" type="text/css"
-          href="css/jquery.dataTables.min.css"/>
+      <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.min.css"/>
+      <link rel="stylesheet" type="text/css" href="css/logo-nav.css" />
 
-    <link rel="stylesheet" type="text/css" href="css/logo-nav.css" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+      <script type="text/javascript" src="js/bootstrap.js" > </script>
+      <script type="text/javascript" src="js/bootstrap.min.js" ></script>
 
-    <script type="text/javascript" src="js/bootstrap.js" > </script>
+      <script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
 
-   <script type="text/javascript" src="js/bootstrap.min.js" ></script>
+      <script type="text/javascript" src="js/jquery-1.12.3.js"></script>
 
-    <script type="text/javascript"
-            src="js/jquery.dataTables.min.js"></script>
+      <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"
+          rel = "stylesheet">
+      <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
-    <script type="text/javascript"
-            src="js/jquery-1.12.3.js"></script>
+    <!-- Javascript -->
+    <script>
+        $(function() {
+            $( "#datepicker_planYear" ).datepicker();
+            $( "#datepicker_period" ).datepicker();
+           // $( "#datepicker" ).datepicker("setDate", "10w+1");
+        });
+    </script>
+</head>
 
 
+</html>
     <script>
 
         $(document).ready(function () {
@@ -134,7 +143,7 @@
                                        for="year">Plan-Year</label>
                                 <div class="col-lg-8">
 
-                               <input type="text" class="form-control"
+                               <input type="text" class="form-control" id="datepicker_planYear"
                                          name="year"
                                        value="2013">
                                 </div>
@@ -143,7 +152,7 @@
                                 <label class="col-lg-3 control-label"
                                        for="period">Period</label>
                                 <div class="col-lg-8">
-                                    <input type="text" class="form-control"
+                                    <input type="text" class="form-control" id="datepicker_period"
                                            name="period"
                                            value="201611">
                                 </div>
